--- a/index.html
+++ b/index.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<title>أسواق دير العسل للخضار والفواكه</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<meta charset="UTF-8">
+<title>المنتجات - أسواق دير العسل</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+
 <style>
-/* === أساسي === */
-* { box-sizing:border-box; margin:0; padding:0; font-family:'Cairo',sans-serif; }
-body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow-x:hidden; text-align:center; padding:50px; }
-input { padding:10px; margin:10px 0; width:200px; border-radius:5px; border:none; text-align:center; }
-button { padding:10px 20px; margin:5px; border:none; border-radius:5px; background:#6bcf63; color:#fff; cursor:pointer; }
-.container{ max-width:1200px; margin:auto; padding:40px 20px; }
-h1{ text-align:center; margin-bottom:30px; color:#8bdc65; }
-.products{ display:grid; grid-template-columns:repeat(auto-fill,minmax(160px,1fr)); gap:20px; }
-.product{ background:#f6fff7; color:#333; border-radius:12px; padding:12px; text-align:center; }
-.product img{ width:100%; height:130px; object-fit:cover; border-radius:10px; margin-bottom:10px; }
-.product button{ background:#4caf50; color:#fff; border:none; padding:8px 15px; border-radius:20px; margin-top:10px; cursor:pointer; }
-.cart{ position:fixed; top:20px; left:20px; width:60px; height:60px; background:#ff8c1a; border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:28px; cursor:pointer; box-shadow:0 6px 15px rgba(0,0,0,.25); z-index:9999; transition:.3s; }
-#cartCount{ position:absolute; top:-6px; right:-6px; background:red; color:white; width:22px; height:22px; font-size:12px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold; }
-.modal{ display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,.6); z-index:1000; }
-.modal-content{ background:#fff; color:#333; max-width:400px; margin:60px auto; padding:20px; border-radius:15px; max-height:85vh; display:flex; flex-direction:column; }
-.cart-item{ display:flex; align-items:center; margin-bottom:10px; }
-.cart-item img{ width:40px; height:40px; border-radius:8px; margin-left:10px; }
-.cart-item button{ margin-right:auto; background:red; color:#fff; border:none; border-radius:10px; padding:5px 10px; cursor:pointer; }
-.payments{ display:flex; gap:10px; justify-content:center; margin-top:15px; }
-.pay{ background:#0b5fa5; color:#fff; padding:10px 15px; border-radius:15px; cursor:pointer; }
-.close{ margin-top:15px; width:100%; }
-.fly-img{ position:fixed; z-index:9999; width:60px; height:60px; border-radius:10px; transition: all 0.8s ease-in-out; pointer-events:none; }
-.copyright-bar{ background: #062c4d; color: #ffffff; text-align: center; padding: 15px 10px; font-size: 14px; letter-spacing: 0.5px; position: fixed; bottom: 0; left: 0; width: 100%; z-index: 1000; }
-@keyframes shake{0%{transform:scale(1)}25%{transform:scale(1.3)}50%{transform:scale(.9)}75%{transform:scale(1.2)}100%{transform:scale(1)}}
+*{ box-sizing:border-box; margin:0; padding:0; font-family:'Cairo',sans-serif }
+body{ background:linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; padding:20px; }
+h1{text-align:center; margin-bottom:30px; color:#8bdc65}
+
+/* شبكة المنتجات */
+.products{ display:grid; grid-template-columns:repeat(auto-fill,minmax(160px,1fr)); gap:20px }
+.product{ background:#f6fff7; color:#333; border-radius:12px; padding:12px; text-align:center }
+.product img{ width:100%; height:130px; object-fit:cover; border-radius:10px; margin-bottom:10px }
+.product button{ background:#4caf50; color:#fff; border:none; padding:8px 15px; border-radius:20px; margin-top:10px; cursor:pointer }
+
+/* الشريط العلوي */
+.top-bar{ display:flex; justify-content:space-between; align-items:center; margin-bottom:25px }
+.back{ background:#ff8c1a; color:#fff; padding:8px 15px; border-radius:25px; text-decoration:none }
+
+/* السلة */
+.cart{ position:fixed; top:20px; left:20px; width:60px; height:60px; background:#ff8c1a; border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:28px; cursor:pointer; box-shadow:0 6px 15px rgba(0,0,0,.25); z-index:9999; transition:.3s }
+#cartCount{ position:absolute; top:-6px; right:-6px; background:red; color:white; width:22px; height:22px; font-size:12px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold }
+.shake{ animation:shake .4s }
+@keyframes shake{ 0%{transform:scale(1)}25%{transform:scale(1.3)}50%{transform:scale(.9)}75%{transform:scale(1.2)}100%{transform:scale(1)} }
+
+/* نافذة السلة */
+.modal{ display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,.6); z-index:1000 }
+.modal-content{ background:#fff; color:#333; max-width:400px; margin:60px auto; padding:20px; border-radius:15px; display:flex; flex-direction:column; max-height:85vh }
+.cart-item{ display:flex; align-items:center; margin-bottom:10px }
+.cart-item img{ width:40px; height:40px; border-radius:8px; margin-left:10px }
+.cart-item button{ margin-right:auto; background:red; color:#fff; border:none; border-radius:10px; padding:5px 10px; cursor:pointer }
+.payments{ display:flex; gap:10px; justify-content:center; margin-top:15px }
+.pay{ background:#0b5fa5; color:#fff; padding:10px 15px; border-radius:15px; cursor:pointer }
+.close{ margin-top:15px; width:100% }
+
+/* حركة الطيران */
+.fly-img{ position:fixed; z-index:9999; width:60px; height:60px; border-radius:10px; transition: all 0.8s ease-in-out; pointer-events:none }
+
+/* الفوتر */
+.copyright-bar { background: #062c4d; color: #ffffff; text-align: center; padding: 15px 10px; font-size: 14px; letter-spacing: 0.5px; position: fixed; bottom: 0; left: 0; width: 100%; z-index: 1000 }
+@media (max-width:768px){ .copyright-bar{ font-size:11px; padding:12px 5px } }
+
 </style>
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+
 </head>
 <body>
-
-<h1>تسجيل الدخول / إنشاء حساب</h1>
-
-<!-- شاشة تسجيل الدخول -->
-<div id="loginScreen" style="position:fixed; inset:0; background:#0b5fa5; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999; color:#fff;">
-  <h2>ادخل رقم الهاتف لتجربة الموقع</h2>
-  <input type="text" id="phoneNumber" placeholder="+9627xxxxxxx"><br>
-  <button id="loginBtn">دخول / إنشاء حساب</button>
-</div>
 
 <div class="container">
 
@@ -51,11 +61,13 @@ h1{ text-align:center; margin-bottom:30px; color:#8bdc65; }
 <a href="index.html" class="back">⬅ الرجوع للرئيسية</a>
 </div>
 
+<!-- السلة -->
 <div class="cart" onclick="openCart()">
 🛒
 <span id="cartCount">0</span>
 </div>
 
+<!-- نافذة السلة -->
 <div id="cartModal" class="modal">
 <div class="modal-content">
 <h3>🧺 محتويات السلة</h3>
@@ -71,27 +83,28 @@ h1{ text-align:center; margin-bottom:30px; color:#8bdc65; }
 </div>
 
 <h1>🛒 المنتجات المتوفرة</h1>
-<div class="products" id="productsContainer"></div>
+<div id="productsContainer" class="products"></div>
+
+</div>
 
 <div class="copyright-bar">
   © 2026 جميع الحقوق محفوظة - أسواق دير العسل للخضار والفواكه
 </div>
-<script>
-// تسجيل الدخول بدون Firebase
-let currentUser = null;
-document.getElementById("loginBtn").addEventListener("click", ()=>{
-  const phone = document.getElementById("phoneNumber").value.trim();
-  if(!phone) return alert("الرجاء إدخال رقم الهاتف");
-  currentUser = { phone: phone };
-  alert("تم تسجيل الدخول كـ " + phone);
-  document.getElementById("loginScreen").style.display="none";
-});
 
-// حماية الصفحة
-function checkLogin() {
-  if(!currentUser) document.getElementById("loginScreen").style.display="flex";
-}
-checkLogin();
+<script>
+const firebaseConfig = {
+  apiKey: "ضعهنا",
+  authDomain: "ضعهنا",
+  projectId: "ضعهنا"
+};
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.firestore();
+
+// حماية الصفحة: إعادة التوجيه إذا لم يسجل الدخول
+auth.onAuthStateChanged(user=>{
+  if(!user) window.location="index.html";
+});
 
 // المنتجات
 const products = [
@@ -123,31 +136,21 @@ products.forEach(p=>{
   container.appendChild(div);
 });
 
-// السلة
-let cart=[];
+let cart = [];
+
 function addToCart(name, price, img, btn){
   cart.push({name, price, img});
   updateCart();
 
+  // حركة الطيران
   const productImg=btn.closest(".product").querySelector("img");
   const cartIcon=document.querySelector(".cart");
   const flyingImg=productImg.cloneNode(true);
-
-  flyingImg.style.position="fixed";
-  flyingImg.style.zIndex="9999";
-  flyingImg.style.width="80px";
-  flyingImg.style.height="80px";
-  flyingImg.style.borderRadius="10px";
-  flyingImg.style.transition="all 0.8s cubic-bezier(.65,-0.3,.3,1.4)";
-
-  const start=productImg.getBoundingClientRect();
-  const end=cartIcon.getBoundingClientRect();
-
-  flyingImg.style.left=start.left+"px";
-  flyingImg.style.top=start.top+"px";
-
+  flyingImg.classList.add("fly-img");
+  flyingImg.style.left=productImg.getBoundingClientRect().left+"px";
+  flyingImg.style.top=productImg.getBoundingClientRect().top+"px";
   document.body.appendChild(flyingImg);
-
+  const end=cartIcon.getBoundingClientRect();
   setTimeout(()=>{
     flyingImg.style.left=end.left+"px";
     flyingImg.style.top=end.top+"px";
@@ -155,23 +158,16 @@ function addToCart(name, price, img, btn){
     flyingImg.style.height="20px";
     flyingImg.style.opacity="0.3";
   },50);
-
-  setTimeout(()=>{
-    flyingImg.remove();
-    cartIcon.style.transform="scale(1.2)";
-    setTimeout(()=>cartIcon.style.transform="scale(1)",200);
-  },800);
+  setTimeout(()=>{ flyingImg.remove(); cartIcon.style.transform="scale(1.2)"; setTimeout(()=>cartIcon.style.transform="scale(1)",200); },800);
 }
 
 function updateCart(){
-  const count=document.getElementById("cartCount");
-  count.textContent=cart.length;
-  count.classList.add("shake");
-  setTimeout(()=>count.classList.remove("shake"),400);
+  document.getElementById("cartCount").textContent = cart.length;
 }
 
 function openCart(){
   if(cart.length===0) return alert("السلة فارغة");
+  saveOrder(cart);
   const itemsDiv=document.getElementById("cartItems");
   itemsDiv.innerHTML="";
   cart.forEach((item,index)=>{
@@ -182,12 +178,12 @@ function openCart(){
       <button onclick="removeItem(${index})">✖</button>
     </div>`;
   });
-  document.getElementById("modalTotal").textContent=
-    cart.reduce((s,i)=>s+i.price,0).toFixed(2);
+  document.getElementById("modalTotal").textContent=cart.reduce((s,i)=>s+i.price,0).toFixed(2);
   document.getElementById("cartModal").style.display="block";
 }
 
 function closeCart(){ document.getElementById("cartModal").style.display="none"; }
+
 function removeItem(index){ cart.splice(index,1); updateCart(); openCart(); }
 
 function payCOD(){ if(cart.length===0) return alert("السلة فارغة"); sendOrder("الدفع عند الاستلام"); }
@@ -195,20 +191,25 @@ function payOnline(){ if(cart.length===0) return alert("السلة فارغة");
 function requestDelivery(){ if(cart.length===0) return alert("السلة فارغة"); let address=prompt("أدخل العنوان"); if(!address) return; sendOrder("طلب توصيل - "+address); }
 
 function sendOrder(method){
+  saveOrder(cart); // حفظ الطلب للمستخدم
   let msg=`طلب جديد\n${method}\n\n`;
   cart.forEach(i=>msg+=`- ${i.name} (${i.price})\n`);
-  window.open("https://wa.me/962789119926?text="+encodeURIComponent(msg));
-  cart=[]; updateCart();
-  alert("تم إرسال الطلب بنجاح!");
+  const phone="962789119926";
+  window.open("https://wa.me/"+phone+"?text="+encodeURIComponent(msg));
 }
 
-// خريطة المندوب
-const map = L.map('map').setView([31.9454, 35.9284], 13);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution: '&copy; OpenStreetMap contributors' }).addTo(map);
-L.marker([31.9454, 35.9284]).addTo(map).bindPopup("🚚 المندوب في الطريق").openPopup();
+function saveOrder(cart){
+  const user = auth.currentUser;
+  if(!user){ alert("يجب تسجيل الدخول أولاً"); return; }
+  db.collection("orders").add({
+    userId: user.uid,
+    items: cart,
+    createdAt: new Date()
+  });
+  cart=[]; document.getElementById("cartCount").textContent=0;
+  alert("تم إرسال الطلب وحفظه بنجاح!");
+}
+
 </script>
-
-<section id="map" style="width:100%; height:400px; margin-top:20px;"></section>
-
 </body>
 </html>
